--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,4 +15,17 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="Widget.ListItem.TextArea" parent="">
+        <item name="android:background">#c8ffffff</item>
+    </style>
+
+    <style name="Widget.ListItem.Title" parent="">
+        <item name="android:textColor">#000000</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="Widget.ListItem.Description" parent="">
+        <item name="android:textColor">#000000</item>
+        <item name="android:textSize">14sp</item>
+    </style>
 </resources>
