--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -28,4 +28,11 @@
         <item name="android:textColor">#000000</item>
         <item name="android:textSize">14sp</item>
     </style>
+
+    <style name="Widget.ListItem.Source" parent="">
+        <item name="android:background">#e6ffffff</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:textSize">10sp</item>
+    </style>
+
 </resources>
