--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -12,8 +12,9 @@
             android:id="@+id/listView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:dividerHeight="0dp"
-            android:divider="@null"/>
+            android:dividerHeight="5dp"
+            android:divider="@null"
+            android:paddingLeft="5dp" android:paddingRight="5dp"/>
     </android.support.v4.widget.SwipeRefreshLayout>
 
 </LinearLayout>
