--- a/app/src/main/res/layout/layout_feed_item_text_frame.xml
+++ b/app/src/main/res/layout/layout_feed_item_text_frame.xml
@@ -1,16 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="@dimen/list_item_default_height"
-    android:id="@+id/rootArea"
-    android:background="@drawable/drop_shadow">
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/imageView"
-        android:src="@mipmap/ic_launcher"
-        android:scaleType="centerCrop" />
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:orientation="vertical"
@@ -19,8 +10,7 @@
         style="@style/Widget.ListItem.TextArea"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
-        android:id="@+id/textArea"
-        android:layout_above="@+id/infoTextView">
+        android:id="@+id/textArea">
 
         <TextView
             android:layout_width="match_parent"
@@ -45,11 +35,12 @@
         android:layout_height="wrap_content"
         android:text="Source: Lenta.ru / 2015-01-01 12:44"
         android:id="@+id/infoTextView"
-        android:layout_alignParentBottom="true"
         style="@style/Widget.ListItem.Info"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:paddingTop="1dp"
         android:paddingBottom="1dp"
-        android:gravity="right" />
+        android:gravity="right"
+        android:layout_below="@+id/textArea" />
+
 </RelativeLayout>
